--- a/SampleAppWithUniTest/.gitignore
+++ b/SampleAppWithUniTest/.gitignore
@@ -11,6 +11,9 @@ CHECKLIST.md
 *.sln.docstates
 .vscode/
 
+#TestCoverage
+coveragereport/
+TestResults/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
