--- a/PdfToExcelConverter/ANVR.PdfToExcelExporter/ANVR.PdfToExcelExporter.csproj
+++ b/PdfToExcelConverter/ANVR.PdfToExcelExporter/ANVR.PdfToExcelExporter.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="6.2.8" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
